# example-project

./: README.md  cookiecutter.json  index.html  slides.html
knowledge_extraction/: .cruft.json  .gitignore  README.md  pyproject.toml
knowledge_extraction/notebooks/: 2024-08-26-test-model.ipynb
knowledge_extraction/scripts/: train.py  validate.py
knowledge_extraction/src/knowledge_extraction/: data.py  model.py
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
