[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "knowledge-extraction"
description = "A repo to extract knowledge from a classifier"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "adjavond@janelia.hhmi.org ", name = "Diane Adjavon " },
]
dynamic = ["version"]
dependencies = [
    'matplotlib',
    'torch',
    'torchvision',
    'tqdm'
]